@@ -1,3 +1,12 @@
+Sun, 29 Jun 2008 16:15:54 +0200 <jerome.chabod@ifrance.com>
+Fix a bug in shutil when moving the download directory bug (#8)
+
+	* src/gpodder/libgpodder.py: When the shutil.move() bug is detected 
+    (an NameError is thrown when moving from an ext file sytem to a 
+    fat or ntfs filesystem, see http://bugs.python.org/issue2549), 
+    the error is ignored, then the previous directory is removed 
+    by a system call to "rm"
+
 Thu, 19 Jun 2008 10:50:11 +0200 <thp@perli.net>
 Fix OPML dialog button sensitivity; sensitivity+totals for Episode Selector
 
